--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -23,8 +23,9 @@
 
 .table {
   margin: 0 0 0px 0;
-  text-align: center;
-  font-size: 18px;
+  text-align: center !important;
+  font-size: 19px;
+  font-weight: 400 !important;
   display: table;
 
   a {
