--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -1,14 +1,14 @@
 <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
-<div class="text-center" *ngIf="!logged_in">
-	<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
-		<h3 class="gd-primary"><strong>Logging in...</strong></h3>
-		<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+	<div class="text-center" *ngIf="!logged_in">
+		<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
+			<h3 class="gd-primary"><strong>Logging in...</strong></h3>
+			<mat-progress-bar mode="indeterminate"></mat-progress-bar>
+		</div>
 	</div>
-</div>
   <mat-sidenav #snav id="snav" class="dark-sidebar pl-xs" [mode]="mobileQuery.matches ? 'side' : 'over'" fixedTopGap="0" [opened]="true" [disableClose]="mobileQuery.matches"  >
     <app-sidebar [username]="username"></app-sidebar>
   </mat-sidenav>
-<div class="profile-container" *ngIf="logged_in">
+	<div class="profile-container" *ngIf="logged_in">
 		<app-alert type="error" title="Confirm your email address" *ngIf="!account_confirmed">
 				<p>
           Your account is not yet verified. You can only share intel with others if your account is activated.
@@ -31,39 +31,39 @@
 		</app-alert>
 
         <div *ngIf="active_tab === 'overview'">
-          <app-paper title="Overview">
-            <div fxLayout="row wrap">
-              <div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
-                <a href="javascript:void">
-                  <mat-card class="bg-primary text-white text-center m-20">
-                    <div class="p-10">
-                      <h2 class="m-0">5</h2>
-                      <small>Indexes</small>
-                    </div>
-                  </mat-card>
-                </a>
-              </div>
-              <div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
-                <a href="javascript:void">
-                  <mat-card class="bg-warning text-white text-center m-20">
-                    <div class="p-10">
-                      <h2 class="m-0">15</h2>
-                      <small>Alliances</small>
-                    </div>
-                  </mat-card>
-                </a>
-              </div>
-              <div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
-                <a href="javascript:void">
-                  <mat-card class="bg-success text-white text-center m-20">
-                    <div class="p-10">
-                      <h2 class="m-0">5168</h2>
-                      <small>Indexed reports</small>
-                    </div>
-                  </mat-card>
-                </a>
-              </div>
-            </div>
+          <app-paper title="Index overview" icon="list_alt" description="Index homepage for a specific index">
+            <!--<div fxLayout="row wrap">-->
+              <!--<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">-->
+                <!--<a href="javascript:void">-->
+                  <!--<mat-card class="bg-primary text-white text-center m-20">-->
+                    <!--<div class="p-10">-->
+                      <!--<h2 class="m-0">5</h2>-->
+                      <!--<small>Indexes</small>-->
+                    <!--</div>-->
+                  <!--</mat-card>-->
+                <!--</a>-->
+              <!--</div>-->
+              <!--<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">-->
+                <!--<a href="javascript:void">-->
+                  <!--<mat-card class="bg-warning text-white text-center m-20">-->
+                    <!--<div class="p-10">-->
+                      <!--<h2 class="m-0">15</h2>-->
+                      <!--<small>Alliances</small>-->
+                    <!--</div>-->
+                  <!--</mat-card>-->
+                <!--</a>-->
+              <!--</div>-->
+              <!--<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">-->
+                <!--<a href="javascript:void">-->
+                  <!--<mat-card class="bg-success text-white text-center m-20">-->
+                    <!--<div class="p-10">-->
+                      <!--<h2 class="m-0">5168</h2>-->
+                      <!--<small>Indexed reports</small>-->
+                    <!--</div>-->
+                  <!--</mat-card>-->
+                <!--</a>-->
+              <!--</div>-->
+            <!--</div>-->
           <app-indexer></app-indexer>
           </app-paper>
         </div>
