--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -214,7 +214,8 @@
 			            <p>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.<br/>
 				            The main reason for this change is that the heatmap exposed personal activity patterns, without the possibility for individuals to delete this information as is required by GDPR.
 			              <br/>
-				            We are sorry for the inconvenience. We are in the process of getting the city indexer userscript approved, and this is one of the changes that have been made to GrepoData in that process.
+				            <br/>
+				            Read more about this update in our <a routerLink="/blog/heatmap-and-indexer-changes-2020" style="text-decoration: underline;">blog post</a>.
 			            </p>
 	              </div>
 	            </mat-card-title>
