--- a/src/app/blog/blog2020/blog2020.component.html
+++ b/src/app/blog/blog2020/blog2020.component.html
@@ -4,7 +4,7 @@
 		</div>
 		<div class="hidden-xs col-sm-8 blog-text">
 			<h1 class="gd-primary">Indexer and heatmap changes</h1>
-			<h3>December 2020: In this release we add a login system to the city indexer tool and we remove the heatmap feature due to privacy concerns</h3>
+			<h3>December 2020: In this release we add a login system to the city indexer tool and we replace the heatmap feature with an 'inactive' indicator.</h3>
 			<hr>
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 			<h4 class="gd-primary">Activity Heatmap Removal</h4>
 			<p>Another requirement for approval of our indexer tool is the removal of the activity heatmap due to privacy concerns.
 				The heatmap feature was based on the timing of gained attack points. While this is public data that can be collected by anybody,
-				the heatmap feature made this information easily accessible. The attack points activity pattern disclosed sensitive information.
+				the heatmap feature made this information easily accessible. This activity pattern disclosed possible sensitive information.
 				Simply put, if we want official approval of our other tools, the heatmap feature has to go. We made the choice to do so because we think
 				our other tools have more to offer.
 				<br/>
