--- a/src/app/alliance/alliance.component.scss
+++ b/src/app/alliance/alliance.component.scss
@@ -68,3 +68,54 @@ mat-chip:hover {
 .form-inline > * {
   margin:5px 3px;
 }
+
+.conquest-card-container {
+  padding: 0 0 25px;
+  display: flex;
+
+  .conquest-card {
+    padding-top: 15px;
+    margin-right: 25px;
+
+    border-radius: 10px;
+    height: 160px;
+    width: 350px;
+    position: relative;
+
+    color: #fff;
+    font-size: 18px;
+    font-weight: 900;
+    text-align: center;
+
+    background-size:cover;
+    background-image: url("../../assets/images/senate_blurred.png");
+    //filter: contrast(50%);
+    //opacity: .9;
+    box-shadow: 0px 0px 10px 1px #18333330 !important;
+
+    .war-title {
+      display: flex;
+      place-content: space-evenly;
+      a {
+        color: #fff !important;
+      }
+    }
+    .war-score {
+      display: flex;
+      place-content: space-evenly;
+      font-size: 46px;
+
+      .pos {
+        -webkit-text-stroke: 1px white;
+        -webkit-text-fill-color: #62ad62;
+      }
+      .neg {
+        -webkit-text-stroke: 1px white;
+        -webkit-text-fill-color: #ea6153;
+      }
+    }
+    .war-icon {
+      font-size: 30px;
+    }
+  }
+}
