--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,16 +2,12 @@
   <div class="footer-below" [ngClass]="sidebar == true ? 'sidebarred':''">
     <div [ngClass]="sidebar == true ? 'container-fluid':'container'">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 footer-share">
-          <!--Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site-->
-          <share-buttons [theme]="'material-light'"
-                         [include]="['facebook','twitter','whatsapp','copy']"
-                         [showText]="true"
-                         [show]="4"
-                         [size]="4"
-                         [url]="'https://grepodata.com'+router.url"
-          ></share-buttons>
-        </div>
+	      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 disclaimer">
+		      <!--<strong>Copyright notices: </strong>&nbsp;-->
+		      Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site
+		      <br/>
+		      Gameplay images related to Grepolis are copyright of InnoGames GmbH.
+	      </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 disclaimer">
           Copyright &copy; Grepodata {{date| date:'yyyy'}}
           <br/>
@@ -24,12 +20,6 @@
 
 
       </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <strong>Copyright notices: </strong>
-                &nbsp;Gameplay images related to Grepolis are copyright of InnoGames GmbH.
-            </div>
-        </div>
     </div>
   </div>
 </div>
