--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,13 @@
 .footer-content {
   vertical-align: middle !important;
   /* Set the fixed height of the footer here */
-  height: 90px;
+  height: 75px;
   padding: 10px;
+
 }
 .footer-background {
-  background-color: #f5f5f5;
+  //background-color: #f5f5f5;
+  background-color: red;
 }
 
 .height-0 {
@@ -13,10 +15,10 @@
   margin-top: 30px !important;
 }
 .height-1 {
-  height: 90px !important;
+  height: 75px !important;
 }
 .height-2 {
-  height: 120px !important;
+  height: 105px !important;
 }
 
 .disclaimer {
@@ -32,7 +34,7 @@
     padding: 10px 0;
   }
   .height-1 {
-    height: 120px !important;
+    height: 105px !important;
   }
   .height-2 {
     height: 150px !important;
